--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "biojs-vis-scatter-plot",
+  "name": "biojs-vis-yugene-graph",
   "description": "BioJS component to provide a scatter plot graph hosted in Stemformatics",
   "version": "0.0.8",
   "homepage": "https://github.com/ArianeMora/bio-js-scatter-plot",
@@ -22,11 +22,11 @@
   ],
   "main": "lib/index.js",
   "scripts": {
-		"test": "echo 'Error: no test specified' && exit 1",
-		"build": "mkdirp build && browserify -r ./:biojs-vis-scatter-plot -o build/test.js",
+                "test": "echo 'Error: no test specified' && exit 1",
+		"build": "mkdirp build && browserify -r ./:biojs-vis-yugene-graph -o build/test.js",
 		"build-browser": "npm run build",
 		"install": "npm run build",
-		"watch": "watchify -r ./:biojs-vis-scatter-plot -v -o build/test.js",
+		"watch": "watchify -r ./:biojs-vis-yugene-graph -v -o build/test.js",
 		"w": "prunner \"npm run sniper\" \"npm run watch\"",
 		"sniper": "sniper ."
   },
@@ -45,7 +45,7 @@
         "https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.6.3/d3-tip.min.js",
         "https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"
     ],
-    "css":["/css/biojs-vis-scatter-plot.css"],
+    "css":["/css/biojs-vis-yugene-graph.css"],
     "snippets": ["examples"],
     "first": "many_sample_types_large",
     "second": "many_sample_types_small",
